# utiles

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  CHANGELOG.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  __index__.html  _typos.toml  changelog.html  cli.html  commands.html  definitions.html  dprint.json  four-o-four.html  index.html  justfile  noxfile.py  package.json  patch.txt  pnpm-lock.yaml  prek.toml  print.html  pyproject.toml  python.html  reference.html  related.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-00671464.js  searchindex-0412edbe.js  searchindex-04bcf2d1.js  searchindex-0560d187.js  searchindex-0786f998.js  (+131 more)
.github/: dependabot.yml
crates/sqlite-utiles-ext/: Cargo.toml  test.sql
crates/sqlite-utiles-ext/src/: lib.rs
crates/utilejson/: Cargo.toml
crates/utilejson/src/: lib.rs
crates/utiles/: Cargo.toml  test.mbtiles-shm
crates/utiles-cli/: Cargo.toml
crates/utiles-cli/src/: args.rs  bin.rs  cli.rs  commands.rs  find.rs  lib.rs  lint.rs  shapes.rs  stdinterator.rs  stdinterator_filter.rs
crates/utiles-cli/src/commands/: children_parent.rs  contains.rs  copy.rs  dev.rs  lint.rs  mbinfo.rs  mbstat.rs  metadata.rs  metadb.rs  mod.rs  rimraf.rs  shapes.rs  tile_stream_cmds.rs  tilejson.rs  tiles.rs
crates/utiles-cli/src/lint/: mbtiles_linter.rs  mod.rs
crates/utiles-core/: Cargo.toml  README.md
crates/utiles-core/src/: asserts.rs  bbox.rs  constants.rs  edges.rs  errors.rs  fns.rs  from.rs  gdal.rs  geostats.rs  lib.rs  lint_error.rs  lnglat.rs  macros.rs  merge.rs  parent.rs  parsing.rs  point.rs  projection.rs  quadkey.rs  sibling_relationship.rs  tests.rs  textiles.rs  tile.rs  tile_data_row.rs  tile_feature.rs  tile_like.rs  tile_range.rs  tile_strfmt.rs  tile_tuple.rs  tile_type.rs  tile_zbox.rs  tilecrz.rs  traits.rs  web_geo_bounds.rs  zoom.rs
crates/utiles-core/src/geojson/: mod.rs
crates/utiles-core/src/mbtiles/: metadata2map.rs  mod.rs  tiles_row.rs
crates/utiles-core/src/mbutiles/: metadata2map.rs  metadata_row.rs  minzoom_maxzoom.rs  mod.rs  tiles_row.rs
crates/utiles-core/src/pmtiles/: mod.rs  pmtile_id.rs
crates/utiles-core/tests/: test_edges.rs
crates/utiles-cover/: Cargo.toml  README.md
crates/utiles-cover/src/: cover.rs  cover_geojson.rs  cover_geotypes.rs  errors.rs  lib.rs
crates/utiles-cover/src/tests/: burn.rs  cover-test.geo.json  coverage.rs  mod.rs
crates/utiles-dev/: Cargo.toml
crates/utiles-dev/src/: cover.rs  double_down_rayon.rs  edges.rs  geojson_builder.rs  lib.rs  main.rs  mvt2geojson.rs  mvt_types.rs  ugeojson.rs
crates/utiles-doubledown/: Cargo.toml
crates/utiles-doubledown/src/: main.rs  raster_tile_join.rs
crates/utiles-napi/: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mts
crates/utiles-napi/.github/workflows/: CI.yml
crates/utiles-napi/src/: lib.rs
crates/utiles-napi/tests/: cli.test.ts  tile.test.ts
crates/utiles-oxipng/: Cargo.toml  README.md
crates/utiles-oxipng/src/: main.rs
crates/utiles/benches/: bench.rs
crates/utiles/examples/: mbt_async.rs  mbt_sync.rs
crates/utiles/src/: bbox.rs  bin.rs  config.rs  constants.rs  core.rs  cover.rs  edges.rs  errors.rs  fns.rs  fs_async.rs  gdal.rs  geostats.rs  globster.rs  hash.rs  hash_types.rs  img.rs  lager.rs  lib.rs  libtiletype.rs  lint.rs  lint_error.rs  lnglat.rs  macros.rs  metadata_json.rs  parsing.rs  pmtiles.rs  print.rs  projection.rs  quadkey.rs  server.rs  sibling_relationship.rs  signal.rs  sleep.rs  tile.rs  tile_data_row.rs  tile_feature.rs  tile_like.rs  tile_range.rs  tile_stream.rs  tile_strfmt.rs  (+7 more)
crates/utiles/src/cli/: args.rs  cli.rs  entry.rs  find.rs  lager.rs  mod.rs  stdin2string.rs  stdinterator.rs  stdinterator_filter.rs
crates/utiles/src/copy/: cfg.rs  mod.rs  pasta.rs  pyramid.rs  unpyramid.rs
crates/utiles/src/dev/: mod.rs  sqlite_u64.rs
crates/utiles/src/geojson/: mod.rs
crates/utiles/src/gj/: mod.rs  parsing.rs
crates/utiles/src/img/: mod.rs  raster_tile_join.rs
crates/utiles/src/internal/: cli_tools.rs  globster.rs  mod.rs  signal.rs
crates/utiles/src/lager/: config.rs  fixed.rs  format.rs  level.rs  mod.rs  reloadable.rs
crates/utiles/src/lint/: mbt_linter.rs  mod.rs
crates/utiles/src/mbt/: agg_tiles_hash.rs  hash_types.rs  info.rs  mbt_stats.rs  mbtiles.rs  mbtiles_async.rs  mbtiles_async_sqlite.rs  mbtype.rs  metadata2map.rs  metadata_row.rs  minzoom_maxzoom.rs  mod.rs  query.rs  stream_writer.rs  tiles_filter.rs  tiles_row.rs  tiles_stream.rs  zxyify.rs
crates/utiles/src/mbtiles/: metadata2map.rs  metadata2tilejson.rs  metadata_row.rs  minzoom_maxzoom.rs  mod.rs  tiles_row.rs
crates/utiles/src/pmt/: mod.rs
crates/utilesqlite/: Cargo.toml
crates/utilesqlite/src/: bin.rs  fns.rs  lib.rs  mbtiles.rs  mbtiles_async.rs  squealite.rs
utiles-pyo3/: Cargo.toml  README.md  build.rs  justfile  pyproject.toml  requirements.dev.txt
utiles-pyo3/bench/: test_bench.py  test_build_profile.py  test_eq.py
utiles-pyo3/python/utiles/: __about__.py  __init__.py  __main__.py  _click.py  _utiles.pyi  cli.py  rio_plugin.py
utiles-pyo3/requirements/: dev.in  dev.txt
utiles-pyo3/src/: cli.rs  float_hash.rs  fmt_nbytes.rs  lager.rs  lib.rs  pyfns.rs  pylager.rs
utiles-pyo3/src/pyutiles/: cover.rs  mod.rs  parsing.rs  pybbox.rs  pycoords.rs  pyfns.rs  pyiters.rs  pylnglat.rs  pylnglatbbox.rs  pyparsing.rs  pytile.rs  pytile_fmts.rs  pytile_tuple.rs  pytile_type.rs  pytilelike.rs  pytiles.rs  pytiles_generator.rs  simplipy.rs  tuple_slice.rs  zoom.rs
utiles-pyo3/tests/: conftest.py  test_build_profile.py  test_cmp.py  test_cover.py  test_exports.py  test_mbtiles.py  test_richcmp.py  test_tile.py  test_tile_fmts.py  test_tiletype.py  test_ut_cli_pyfn.py  test_utiles.py  test_version.py  tutils.py
utiles-pyo3/tests/cli/: test_agg_hash.py  test_copy.py  test_copy_db.py  test_copy_pyramid.py  test_db.py  test_edges.py  test_mt.py  test_rimraf.py  test_super_utiles_cli.py  test_update.py
utiles-pyo3/tests/mercantests/: test_cli.py  test_funcs.py
(+575 files in other folders)
