[workspace]
resolver = "2"
members = [
    "crates/utiles",
    "crates/utiles-core",
    "crates/utiles-dev", "crates/utiles-doubledown",
    "crates/utiles-oxipng",
    "utiles-pyo3",
]

[workspace.package]
version = "0.7.3"
authors = [
    "Jesse Rubin <jessekrubin@gmail.com>",
    "Dan Costello <dan.costello2@gmail.com>",
]
documentation = "https://github.com/jessekrubin/utiles"
edition = "2021"
homepage = "https://github.com/jessekrubin/utiles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jessekrubin/utiles"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
async-sqlite = { version = "0.5.0", features = ["bundled", "functions", "trace"] }
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["tokio", "json", "macros"] }
axum-extra = "0.10.0"
base64 = "0.22.1"
clap = { version = "4.5.28", features = ["derive", "color", "wrap_help"] }
fast_hilbert = "2.0.0"
fnv = "1.0.7"
futures = "0.3.31"
geo-types = "0.7.15"
geojson = "0.24.1"
globset = "0.4.15"
hex = "0.4.3"
image = "0.25.5"
imagesize = "0.13.0"
indicatif = "0.17.11"
indoc = "2.0.5"
jiff = "0.2.0"
json-patch = "3.0.1"
md-5 = "0.10.6"
noncrypto-digests = "0.3.2"
num_cpus = "1.16.0"
owo-colors = { version = "4.1.0", features = ["supports-color"] }
pmtiles = { version = "0.11.0", features = ["mmap-async-tokio", "tilejson"] }
pyo3 = "0.23.4"
pyo3-build-config = "0.23.2"
rusqlite = { version = "0.33.0", features = ["bundled", "vtab", "blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
size = { version = "=0.5.0-preview2", features = ["default"] }
sqlite-hashes = { version = "0.8.0", default-features = false, features = ["hex", "window", "md5", "fnv", "xxhash"] }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
thiserror = "2.0.11"
tilejson = "0.4.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["trace", "timeout", "add-extension", "util", "request-id", "compression-gzip", "compression-zstd", "async-compression", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["serde", "serde_json", "env-filter"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64", "xxh3", "const_xxh32", "const_xxh64", "const_xxh3"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package]
image.opt-level = 3
quote.opt-level = 3
serde_derive.opt-level = 3
syn.opt-level = 3
proc-macro2.opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = "thin"
# lto = "fat"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unsafe_code = "warn"
# MUST CLEAN UP MAIN LIBRARY....
unreachable_pub = "warn"

[workspace.lints.clippy]
# groups
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "warn", priority = 2 }
panic = { level = "warn", priority = -1 }
style = { level = "warn", priority = 1 }
perf = { level = "warn", priority = 3 }
# DENY lints
unwrap_used = "deny"
# allow pedantic
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
