[project]
name = "utiles-dev"
version = "0.0.1"
description = "utiles-root-pyproject"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "hypothesis>=6.135.4",
    "maturin>=1.8.7",
    "mercantile>=1.2.1",
    "mypy>=1.16.0",
    "nox>=2025.5.1",
    "pmtiles>=3.4.1",
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.13",
    "tomli>=2.2.1",
    "typing-extensions>=4.14.0",
]

[tool.uv.workspace]
members = [
    "utiles-pyo3",
    ]
