[package]
name = "pyutiles"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "libutiles"
crate-type = ["cdylib"]

[dependencies]
utiles = { path = "../crates/utiles" }
pyo3 = { workspace = true, features = ["experimental-async"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
size.workspace = true

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config.workspace = true
