[package]
name = "pyutiles"
version.workspace = true
authors.workspace = true
edition.workspace = true
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
license.workspace = true

[lib]
name = "libutiles"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["experimental-async"] }
serde.workspace = true
serde_json.workspace = true
size.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utiles = { path = "../crates/utiles" }

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config.workspace = true
