[package]
name = "utiles-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "utiles_cli"
path = "src/lib.rs"

[[bin]]
name = "ut"
path = "src/bin.rs"

[dependencies]
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace= true
clap = { version = "4.4.7", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
globset = "0.4.13"
ignore = "0.4.20"
utiles = { path = "../utiles" }
utilesqlite = { path = "../utilesqlite" }
