[package]
name = "utiles-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "utiles_cli"
path = "src/lib.rs"

[[bin]]
name = "ut"
path = "src/bin.rs"

[dependencies]
rusqlite = {  workspace=true, features = ["bundled", "hooks"] }
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber= {workspace= true, features = ["fmt", "json", "env-filter", "chrono"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace= true
clap = { version = "4.4.7", features = ["derive", "color", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
globset = "0.4.13"
ignore = "0.4.20"
utiles = { path = "../utiles" }
utilejson = { path = "../utilejson" }
utilesqlite = { path = "../utilesqlite" }
tokio-stream = "0.1.14"
futures = "0.3.29"
walkdir = "2.4.0"
time = "0.3.30"
itertools = "0.12.0"
webbrowser = "0.8.12"
