[package]
name = "utiles-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Map tile utilities aka utiles"
readme = "README.md"
categories = ["science::geo"]
keywords = ["map", "geo", "mercator", "tile"]
homepage = "https://github.com/jessekrubin/utiles"
repository = "https://github.com/jessekrubin/utiles"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
# Not going to get rid of fast_hilbert
fast_hilbert.workspace = true

