[package]
name = "utiles-core"
version.workspace = true
authors.workspace = true
categories = ["science::geo"]
edition.workspace = true
homepage = "https://github.com/jessekrubin/utiles"
keywords = ["map", "geo", "mercator", "tile"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/jessekrubin/utiles"
description = "Map tile utilities aka utiles"

[dependencies]
# Not going to get rid of fast_hilbert
fast_hilbert = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log = "0.4.22"

[features]
default = ["pmtiles"]
all = ["pmtiles"]
pmtiles = ["dep:fast_hilbert"]
