[package]
name = "utiles-dev"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utiles_dev"
path = "src/lib.rs"

[[bin]]
name = "utdev"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
geojson.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utiles-core = { path = "../utiles-core" }
utiles = { path = "../utiles" }
