[package]
name = "utiles-dev"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utiles_dev"
path = "src/lib.rs"

[[bin]]
name = "utdev"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
geojson.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utiles-core = { path = "../utiles-core" }
utiles = { path = "../utiles" }
tokio-stream.workspace = true
tracing = "0.1.41"
rusqlite.workspace = true
futures.workspace = true
futures-util = "0.3.31"
image.workspace = true
indoc.workspace = true
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
num_cpus = "1.16.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
