[package]
name = "utiles-dev"
description = "utiles-dev playground"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utiles_dev"
path = "src/lib.rs"

[[bin]]
name = "utdev"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossbeam.workspace = true
futures-util.workspace = true
futures.workspace = true
geojson.workspace = true
image.workspace = true
indoc.workspace = true
num_cpus.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing.workspace = true
utiles = { path = "../utiles" }
utiles-core = { path = "../utiles-core" }
