[package]
name = "utiles-doubledown"
description = "double the size of tiles in a tileset-db"
publish = false
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
image.workspace = true
indicatif.workspace = true
indoc.workspace = true
rusqlite.workspace = true
size.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
utiles = { version = "0.7.3", path = "../utiles" }
