[package]
edition = "2021"
name = "utiles-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
utiles = { path = "../utiles" }
utiles-cli = { path = "../utiles-cli" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
