[package]
name = "utiles-oxipng"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "color", "wrap_help"] }
futures.workspace = true
indicatif.workspace = true
oxipng = { version = "9.1.5", features = [] }
size.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-stream.workspace = true
tracing.workspace = true
utiles = { path = "../utiles" }
