[package]
name = "utiles"
version.workspace = true
authors.workspace = true
categories = ["science::geo"]
edition.workspace = true
homepage = "https://github.com/jessekrubin/utiles"
keywords = ["map", "geo", "mercator", "tile"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/jessekrubin/utiles"
description = "Web map tile utils (aka utiles)"

[lib]
name = "utiles"
path = "src/lib.rs"

[[bin]]
name = "utiles"
path = "src/bin.rs"
required-features = [
  "cli",
]

[dependencies]
anyhow.workspace = true
async-sqlite = { workspace = true, features = ["bundled", "functions", "trace", "blob"] }
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["tokio", "json", "macros"] }
chrono = "0.4.38"
clap = { workspace = true, features = ["derive", "color", "wrap_help"], optional = true }
fnv = "1.0.7"
futures = "0.3.31"
geo-types.workspace = true
geojson.workspace = true
globset = "0.4.15"
hex = "0.4.3"
image = "0.25.2"
imagesize = "0.13.0"
indicatif.workspace = true
indoc = { workspace = true }
json-patch = "3.0.1"
md-5 = "0.10.6"
noncrypto-digests = "0.3.2"
num_cpus = "1.16.0"
once_cell = "1.20.2"
owo-colors = { version = "4.1.0", features = ["supports-color"] }
pmtiles = { version = "0.11.0", features = ["mmap-async-tokio", "tilejson"], optional = true }
rusqlite = { workspace = true, features = ["bundled", "blob", "backup", "functions", "trace"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
size.workspace = true
sqlite-hashes = { version = "0.7.6", default-features = false, features = ["hex", "window", "md5", "fnv", "xxhash"] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tilejson.workspace = true
time = "0.3.36"
tokio = { workspace = true, features = ["fs"] }
tokio-stream.workspace = true
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["trace", "timeout", "add-extension", "util", "request-id", "compression-gzip", "compression-zstd", "async-compression"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter", "chrono"] }
utiles-core = { path = "../utiles-core", version = "0.7.0-alpha.9" }
walkdir = "2.5.0"
xxhash-rust = { workspace = true, features = ["const_xxh3", "const_xxh64", "const_xxh32", "xxh3", "xxh64", "xxh32"] }

# was using for edge finding
#ndarray = { version = "0.16.1", features = ["rayon"] }
#rayon = "1.10.0"

# deadpool = { version = "0.12.1", features = ["managed"], default-features = false }
# deadpool-sync = { version = "0.1.4", features = ["tracing"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[features]
default = [
  "cli",
  "pmtiles",
]
all = [
  "cli",
  "pmtiles",
]
lagereload = []
python = [
  "lagereload"
]
cli = ["dep:clap", "dep:pmtiles"]
pmtiles = ["dep:pmtiles"]
