[package]
name = "utiles"
version.workspace = true
authors.workspace = true
categories = ["science::geo"]
edition.workspace = true
homepage = "https://github.com/jessekrubin/utiles"
keywords = ["map", "geo", "mercator", "tile", "webmap"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/jessekrubin/utiles"
description = "Web map tile utils (aka utiles)"

[lib]
name = "utiles"
path = "src/lib.rs"

[[bin]]
name = "utiles"
path = "src/bin.rs"
required-features = [
    "cli",
]

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-sqlite = { workspace = true, features = ["bundled", "functions", "trace", "blob"] }
async-trait.workspace = true
axum-extra.workspace = true
axum.workspace = true
base64.workspace = true
fnv.workspace = true
futures.workspace = true
geo-types.workspace = true
geojson.workspace = true
globset.workspace = true
hex.workspace = true
image.workspace = true
imagesize.workspace = true
indicatif.workspace = true
indoc = { workspace = true }
jiff.workspace = true
json-patch.workspace = true
md-5.workspace = true
noncrypto-digests.workspace = true
num_cpus.workspace = true
owo-colors.workspace = true
rusqlite = { workspace = true, features = ["bundled", "blob", "backup", "functions", "trace"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
size.workspace = true
sqlite-hashes.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tilejson.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-stream.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
tracing.workspace = true
utiles-core = { path = "../utiles-core", version = "0.7.2" }
walkdir.workspace = true
xxhash-rust.workspace = true
# optional
clap = { workspace = true, features = ["derive", "color", "wrap_help"], optional = true }
pmtiles = { workspace = true, optional= true}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[features]
default = [
    "cli",
    "pmtiles",
]
all = [
    "cli",
    "pmtiles",
]
lager-reload = []
python = [
    "lager-reload"
]
cli = ["dep:clap", "dep:pmtiles"]
pmtiles = ["dep:pmtiles"]
