[package]
name = "utilesqlite"
version = "0.1.0"
edition = "2021"

[lib]
name = "utilesqlite"
path = "src/lib.rs"

[[bin]]
name = "utilesql"
path = "src/bin.rs"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "vtab", "blob"] }
tilejson = "0.3.2"
tracing = { version = "0.1.40", features = [] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-rusqlite = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
utiles = { path = "../utiles" }