[package]
name = "utilesqlite"
version = "0.1.0"
edition = "2021"

[lib]
name = "utilesqlite"
path = "src/lib.rs"

[[bin]]
name = "utilesql"
path = "src/bin.rs"

[dependencies]
rusqlite = { workspace = true, features = ["bundled", "vtab", "blob", "backup", "functions", ] }
tilejson.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
utiles = { path = "../utiles" }
